--- a/css/wip-funciones.css
+++ b/css/wip-funciones.css
@@ -835,7 +835,14 @@ img.client-item {
 .site-info {
   border-top: 1px solid #ccc;
 }
-
+.contact-list i {
+    min-width: 30px;
+    text-align: center;
+}
+.contact-list li:last-child i {
+    height: 30px;
+    float: left;
+}
 /* COURSES POST TyPE */
 #learn-press-course-tabs {
     margin: 0 !important;
