--- a/css/wip-funciones.css
+++ b/css/wip-funciones.css
@@ -685,9 +685,11 @@ h3.wip-initial-date {
     display: block;
     font-size: 14px;
     color: #777;
+    margin-top: 3px;    
 }
 .wip-news .more-new {
-    margin-top: 2px;
+    margin-top: 3px;
+    display: block;
 }
 /* What we do */
 .thim-widget-icon-box:hover .image_box {
@@ -748,15 +750,16 @@ h3.wip-initial-date {
     vertical-align: middle;
 }
 .thim-widget-icon-box .wrapper-box-icon.has_custom_image:not(.overlay) .desc-icon-box {
-    margin-top: 12px;
+    margin-top: 8px;
     padding-right: 0;
-        min-height: 66px;
+    min-height: 66px;
 }
 .thim-widget-icon-box .content-inner {
     padding: 15px;
 }
 .thim-widget-icon-box .content-inner .desc-content {
     font-size: 14px;
+    color: #777;
 }
 /* SPONSORS */
 #wip-sponsors {
