--- a/css/modals.css
+++ b/css/modals.css
@@ -109,20 +109,10 @@
 .modal_fmobile {
   overflow: hidden;
   height: 100vh;
-  /*
-  width: 100%;
-  height: 100%;
-  overflow: hidden;
-  body{
-      position: absolute;
-      top:0;
-      left:0;
-      width: 100%;
-      height: 100%;
-  }
-  */
 }
-
+.modal_mobile .overlay_modal {
+  overflow: scroll;
+}
 .modal_cm {
   cursor: auto;
   position: relative;
